# Jugsaw.jl

./: .gitignore  CNAME  LICENSE  Makefile  Project.toml  README.md  demo.json
.ci/: codecov.jl  run.jl
.github/workflows/: Documentation.yml  deploy.yml  juliaci.yml
Test/: Dockerfile  Project.toml  app.jl
charts/daprcomponents/: job-event-pubsub.yaml  job-event-store.yaml  job-pubsub.yaml  job-result-store.yaml  job-store.yaml  job_pub_sub.yaml  job_result_store.yaml  job_store.yaml  pubsub.yaml  secret_store.yaml  statestore.yaml  user_store.yaml
charts/jugsaw/: Chart.yaml  values.yaml
dapr-components/: config.yaml  job-event-pubsub.yaml  job-event-store.yaml  job-pubsub.yaml  job-result-store.yaml  job-store.yaml  jobresult.yaml  jobs.yaml  jobs_result_store.yaml  jobstatus.yaml  no_pub_sub.yaml  pubsub.yaml  secret_store.yaml  user-store.yaml
deploy/: docker-compose.yml  nginx.tmpl
dev/: index.html  search_index.js
dev/client/: index.html
dev/client-javascript/: index.html
dev/client-julia/: index.html
dev/client-python/: index.html
dev/design/: index.html
dev/developer/: index.html
dev/framework/: index.html
dev/get-started/: index.html
dev/markdown/: client-javascript.md  client-julia.md  client-python.md  client.md  design.md  developer.md  framework.md  get-started.md  index.md
dev/search/: index.html
docs/: Project.toml  README.md  make.jl  servedoc.sh
docs/src/: client-javascript.md  client-julia.md  client-python.md  client.md  (+7 more)
example/generic_tensornetwork/service/: Dockerfile  README.md  main.py  pyproject.toml  simpleparser.py
js/: README.md  jugsawdebug.html  jugsawirparser.js
src/: Jugsaw.jl  checkapp.jl  clientcode.jl  config.jl  errors.jl  register.jl  template.jl
src/py/api/: Dockerfile  pyproject.toml
src/py/api/api/: auth.py  config.py  harbor.py  job.py  job_manager.py  main.py  utils.py
src/py/jugsaw/: README.md  pyproject.toml
src/py/jugsaw/jugsaw/: __init__.py  app.py  jugsawir.lark  model.py  remotecall.py  simpleparser.py
src/py/jugsaw/tests/: test_simpleparser.py
template/: app.jl  config.yaml  manager.jl
test/: clientcode.jl  config-test.toml  config.jl  errors.jl  register.jl  runtests.jl  template.jl  test.http  typeuniverse.jl
(+216 files in other folders)
