[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Jun Tian <tianjun.cpp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jugsaw = { path = "../../../src/py/jugsaw", develop = true }
gradio = "^3.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'tuna.mirrors'
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
secondary = false
