[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jun Tian <tianjun.cpp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
dapr = "^1.9.1"
pydantic = "^1.10.7"
cloudevents = "^1.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.24.0"
kubernetes = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'bfsu.mirrors'
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
secondary = false
