[tool.poetry]
name = "jugsaw"
version = "0.1.0"
description = ""
authors = ["Jun Tian <tianjun.cpp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = "^1.10.6"
lark = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'bfsu.mirrors'
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
secondary = false
